# dircomply

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  changelog.txt  main.py  pyproject.toml  readme.md  readme.txt  req312_win.txt  requirements.in  requirements.txt  requirements_linux.txt  setup.py
dircomply/: MANIFEST.in  __init__.py  gui.py  main.py  startup.py  utils.py  version.py
dircomply/application/: config.py  extensions.json  settings.json
dircomply/basic_functions/: os_funs.py  settings.py  utils.py
dircomply/config/: extensions.json
dircomply/core/: compare.py  help.py  startup.py
dircomply/gui/: gui.py
dircomply/paths_manager/: paths_manager.py
docs/: setup_pypi.txt  test.txt  v0.2.0.txt
folderdiff/: main.py
linux_setup/: delete_local_env.sh  delete_pycache.sh  env_config.sh  local_run.sh  local_setup.sh
pypi/: README.md  build.sh  clean.sh  upload.sh
pypi_setup/: clean.bat  upload.bat
pypi_setup_linux/: build.sh  clean.py  upload.sh
setup/: README.md  bat_build_installer.bat  bat_create_spec_file.bat  delete_local_env.sh  delete_pycache.sh  env_config.sh  local_run.sh  local_setup.sh
windows_setup/: bat_build_installer.bat  bat_create_spec_file.bat  delete_local_env.bat  delete_pycache.bat  env_config.bat  local_run.bat  local_setup.bat
