[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dircomply"
dynamic = ["version"]
description = "Compare the files between two project folders."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Benevant Mathew", email = "benevantmathewv@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.scripts]
dircomply = "dircomply.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dircomply", "dircomply.*"]

[tool.setuptools.package-data]
dircomply = ["application/extensions.json", "application/settings.json"]

[tool.setuptools.dynamic]
version = { attr = "dircomply.version.__version__" }

[dependency-groups]
dev = [
    "build>=1.5.0",
    "setuptools>=82.0.1",
    "twine>=6.2.0",
]